syntax = "proto3";

package data_transform_arrow;

option go_package = "go-duckdb/data_transform_arrow";
import "google/protobuf/empty.proto";

message QueryOut {
    int32 sequency_number = 1;
    int32 count = 2;
    repeated bytes data = 3;
}


// Interface exported by the server.
service DataTransform {
  // A server-to-client streaming RPC.
  rpc Transform(google.protobuf.Empty) returns (stream QueryOut) {}
}